@@ -70,8 +70,10 @@ class ApiQueryAllCategories extends ApiQueryGeneratorBase {
 		}
 
 		$dir = ( $params['dir'] == 'descending' ? 'older' : 'newer' );
-		$from = ( is_null( $params['from'] ) ? null : $this->titlePartToKey( $params['from'] ) );
-		$to = ( is_null( $params['to'] ) ? null : $this->titlePartToKey( $params['to'] ) );
+		$from = ( is_null( $params['from'] ) ? null : 
+				$this->titlePartToKey( $params['from'], NS_CATEGORY ) );
+		$to = ( is_null( $params['to'] ) ? null : 
+				$this->titlePartToKey( $params['to'], NS_CATEGORY ) );
 		$this->addWhereRange( 'cat_title', $dir, $from, $to );
 
 		$min = $params['min'];
@@ -83,7 +85,9 @@ class ApiQueryAllCategories extends ApiQueryGeneratorBase {
 		}
 
 		if ( isset( $params['prefix'] ) ) {
-			$this->addWhere( 'cat_title' . $db->buildLike( $this->titlePartToKey( $params['prefix'] ), $db->anyString() ) );
+			$this->addWhere( 'cat_title' . $db->buildLike(
+					$this->titlePartToKey( $params['prefix'], NS_CATEGORY ),
+					$db->anyString() ) );
 		}
 
 		$this->addOption( 'LIMIT', $params['limit'] + 1 );
